css/custom.css
html, body {
    height: 100%;
    padding: 0;
    margin: 0;
}
/*home page*/

#nav-home {
    position: absolute;
    z-index:2;
    margin-top: -400px;
    background-color: rgba(255, 255, 255, 0.5);
    -webkit-transition: background 0.5s linear;
    -moz-transition: background 0.5s linear;
    -ms-transition: background 0.5s linear;
    -o-transition: background 0.5s linear;
    transition: background 0.5s linear;
}

#nav-home:hover {
    background-color: rgba(255, 255, 255, 1.0);
}

#homepage-buttons {
    text-align: center;
    margin-top: 400px;
}

.slider.fullscreen {
    position: fixed;
}

#left-button {
    background-color: #007EE5;
    height: 55px;
    line-height: 55px;
    width: 200px;
    font-size: 20px;
    margin-right: 60px;

}

#left-button:hover {
    background-color: #2B9DFC;
}

#right-button {
    background-color: #88C057;
    height: 55px;
    line-height: 55px;
    width: 200px;
    font-size: 20px;
}

#right-button:hover {
    background-color: #B4E38B;
}

.btn:hover, .btn-large:hover {
    background-color: #009fff;
}

.slider .indicators .indicator-item.active {
    background-color: #007EE5;
}

.slider .indicators .indicator-item.active:nth-last-child(2) {
    background-color: #ff0000;
}

.slider .indicators .indicator-item.active:nth-last-child(1) {
    background-color: #88C057;
}


/* Research page */

#research-body {
    opacity: 1;
    transition: 1s opacity;
    background-image: url("../img/car-bg-1.jpg");
}

#research-body.fade-out {
    opacity: 0;
    transition: none;
}

#shell {
    height: 90%;
    margin: 1% 3% 1% 3%;
}

#gallery {
    background-color: rgba(255, 255, 255, 0.9);
    height: 100%;
    width: 70%;
    overflow: hidden;
    white-space: nowrap;
    float: left;
    border-radius: 5px;
}

.horizontal-section {
    display: inline-block;
    width: 100%;
    height: 100%;
    position: relative;
}


.vertical-section {
    clear:left;
    float:left;
    display:inline-block;
    width: 100%;
    height: 100%;
    position:relative;
}

#t2 {
    width: 29%;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.9);
    float: left;
    border-radius: 5px;
    margin-left: 1%;
}

/* navbar */

#logo {
    width: 50%;
    height:50%;
}

nav .brand-logo {
    top: 10%;
    left: 12.5%;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
}

nav ul a {
    color: #007EE5;
}

nav ul {
    margin-right: 1.5%;
}

